--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,4 @@ DB_PASSWORD=vcdmsa77
 DB_NAME=aposta_db
 DB_PORT=5432
 PORT=8080
+CORS_ALLOWED_ORIGINS=http://localhost:5173,https://27af3047d606.ngrok-free.app
