--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,4 @@ DB_NAME=aposta_db
 DB_PORT=5432
 PORT=8080
 CORS_ALLOWED_ORIGINS=http://localhost:5173,https://27af3047d606.ngrok-free.app
+JWT_SECRET=aqui_vai_uma_string_muito_segura_e_aleatoria_12345
