--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,28 +1,33 @@
 # Estágio 1: Build - Usa uma imagem Go completa para compilar a aplicação
-FROM golang:1.21-alpine AS builder
+FROM golang:1.23-alpine AS builder
 
+# Define o diretório de trabalho dentro do contêiner
 WORKDIR /app
 
-# Copia os arquivos de dependências e as baixa
+# Copia os ficheiros de dependências primeiro para aproveitar o cache do Docker
 COPY go.mod go.sum ./
+# Baixa as dependências
 RUN go mod download
 
-# Copia todo o código-fonte
+# Copia todo o resto do código-fonte do backend
 COPY . .
 
-# Compila a aplicação de forma estática
+# Compila a aplicação. As flags criam um executável estático e otimizado para Linux.
 RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o main .
 
-# Estágio 2: Produção - Usa uma imagem mínima e copia apenas o executável
+# ---
+
+# Estágio 2: Produção - Começa com uma imagem "vazia" (alpine), que é extremamente leve
 FROM alpine:latest  
 
+# Define o diretório de trabalho
 WORKDIR /root/
 
-# Copia o binário compilado do estágio de build
+# Copia apenas o ficheiro executável compilado do estágio de build anterior
 COPY --from=builder /app/main .
 
 # Expõe a porta que a nossa aplicação Go usa
 EXPOSE 8080
 
-# Comando para rodar a aplicação quando o container iniciar
+# Comando para executar a aplicação quando o contêiner iniciar
 CMD ["./main"]
