--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,10 +1,11 @@
 server {
   listen 80;
-  server_name localhost;
+  server_name _;  # Aceita qualquer host enviado pelo Traefik
+
+  root /usr/share/nginx/html;
+  index index.html index.htm;
 
   location / {
-    root   /usr/share/nginx/html;
-    index  index.html index.htm;
-    try_files $uri $uri/ /index.html;
+    try_files $uri /index.html;
   }
 }
